minor changes in format